doesnt work check method