@@ -1,66 +1,83 @@
 package utils.web;
 
+import org.openqa.selenium.Platform;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
-import utils.PropertyReader;
+
 
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
-import java.util.concurrent.TimeUnit;
+
 
 public class WebDriverManager {
-    public static synchronized WebDriver getWebDriver() {
-        return getWebDriver(PropertyReader.get().readValue("browser"));
-    }
 
     public static WebDriver getWebDriver(String browser) {
+        WebDriver driver;
         switch (browser) {
             default:
-            case "chrome":
+            case "chrome": {
                 ChromeOptions options = new ChromeOptions();
                 String os = System.getProperty("os.name").toLowerCase().substring(0, 3);
                 String chromeBinary = "src/main/resources/chromedriver" + (os.equals("win") ? ".exe" : "");
                 System.setProperty("webdriver.chrome.driver", chromeBinary);
-                WebDriver chromeWebDriver = new ChromeDriver(options);
-
-                chromeWebDriver.manage().timeouts().implicitlyWait(10000, TimeUnit.MILLISECONDS);
-
-                chromeWebDriver.manage().window().maximize();
-                return chromeWebDriver;
-            case "chrome_remote_selenoid":
+                driver = new ChromeDriver(options);
+                return driver;
+            }
+        }
+    }
+    public static WebDriver getWebDriver(String localization, String os, String os_version, String browser, String version) {
+        switch (localization) {
+            default:
+            case "local": {
+                return getWebDriver(browser);
+            }
+            case "browserstack": {
+                DesiredCapabilities caps = new DesiredCapabilities();
+                caps.setCapability("os", os);
+                caps.setCapability("os_version", os_version);
+                caps.setCapability("browser", browser);
+                caps.setCapability("browser_version", "latest");
+                caps.setCapability("browserstack.local", "false");
+                caps.setCapability("browserstack.selenium_version", "3.5.2");
+                RemoteWebDriver bsDriver = null;
+                try {
+                    bsDriver = new RemoteWebDriver(new URL("https://USERNAME:ACCESS_KEY@hub-cloud.browserstack.com/wd/hub"), caps);
+                } catch (MalformedURLException e) {
+                    e.printStackTrace();
+                }
+                return bsDriver;
+            }
+            case "grid": {
+                DesiredCapabilities caps = new DesiredCapabilities();
+                caps.setPlatform(Platform.valueOf(os));
+                caps.setBrowserName(browser);
+                caps.setVersion(version);
+                RemoteWebDriver gDriver = null;
+                try {
+                    gDriver = new RemoteWebDriver(new URL("https://localhost:4444/wd/hub"), caps);
+                } catch (MalformedURLException e) {
+                    e.printStackTrace();
+                }
+                return gDriver;
+            }
+            case "selenoid": {
                 DesiredCapabilities capabilities = new DesiredCapabilities();
-                capabilities.setBrowserName("chrome");
-                capabilities.setVersion("81.0");
+                capabilities.setBrowserName(browser);
+                capabilities.setVersion(version);
                 capabilities.setCapability("enableVNC", true);
                 capabilities.setCapability("enableVideo", false);
 
-                RemoteWebDriver driver = null;
+                RemoteWebDriver sDriver = null;
                 try {
-                    driver = new RemoteWebDriver(
-                            URI.create("http://localhost:4444/wd/hub").toURL(),
-                            capabilities
-                    );
+                    sDriver = new RemoteWebDriver(new URL("https://localhost:4444/wd/hub"), capabilities);
                 } catch (MalformedURLException e) {
                     e.printStackTrace();
                 }
-                driver.manage().timeouts().implicitlyWait(40000, TimeUnit.MILLISECONDS);
-                driver.manage().window().maximize();
-                return driver;
-            case "chrome_remote_selenium":
-                DesiredCapabilities caps = DesiredCapabilities.chrome();
-                RemoteWebDriver wdriver = null;
-                try {
-                    wdriver = new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"), caps);
-                } catch (MalformedURLException e) {
-                    e.printStackTrace();
-                }
-                wdriver.manage().timeouts().implicitlyWait(40000, TimeUnit.MILLISECONDS);
-                wdriver.manage().window().maximize();
-                return wdriver;
+                return sDriver;
+            }
         }
     }
 
